--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "serverless-prune-plugin": "^2.0.2",
+        "serverless-s3-sync": "^3.1.0",
         "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "serverless-s3-sync": "^3.1.0"
     }
 }
